# manager

./: .gitignore  README.md
.github/workflows/: rust.yml
src/: components.css  index.html  init.js  layouts.css  localize.js  main.html  main.js  native.js  nav.js  oobe.html  oobe.js  styles.css  test1.js  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/languages/: zh_cn.json
src-tauri/resources/lang/: en_us.json  zh_cn.json  zh_tw.json
src-tauri/src/: config_manager.rs  consts.rs  env_manager.rs  json_util.rs  language_manager.rs  main.rs  mod_manager.rs  tauri_commands.rs
src/assets/: about.md
src/styles/: layouts.css
