[package]
name = "finality"
version = "1.0.0"
description = "Finality Framework"
authors = ["Team Rainfall"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "process-all", "path-all", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4.1"
zip = "2.2.0"
window-vibrancy = "0.4.3"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
